--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,5 +24,15 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm ci
-    - run: npm run deploy
+    - run: npm install
+    - run: npm run build
+    
+    - name: Deploy to GitHub pages
+      if: success()
+      uses: crazy-max/ghaction-github-pages@v1
+      with:
+        target_branch: gh-pages
+        build_dir: build
+        committer_name: github-actions
+      env:
+        GITHUB_PAT: ${{ secrets.deploy_access_token }}
