--- a/package.json
+++ b/package.json
@@ -35,9 +35,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.tsx\"",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.tsx\""
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -55,7 +53,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^2.2.0",
     "prettier": "^2.0.5"
   },
   "homepage": "http://krypton-org.github.io/krypton-web-demo"
