--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-timeago": "^4.1.1",
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
+    "@types/socket.io-client": "^1.4.33",
     "bulma": "^0.8.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -28,6 +29,7 @@
     "react-timeago": "^4.4.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "socket.io-client": "^2.3.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
